[metadata]
name = zjy_webob
summary = zjy's web framework based on webob
description-file = README.md
author = zhujiongyao
author-email = zjywade@qq.com
home-page = http://www.google.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7

[files]
packages =
    zjy_webob

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[entry_points]
paste.filter_factory =
    login_service = zjy_webob.middleware:CookieAuthMiddleware.factory
    ak_auth = zjy_webob.middleware:AccessKeyAuthMiddleware.factory
    internal_auth = zjy_webob.middleware:InternalServiceAuthMiddleware.factory
    sys_log = zjy_webob.middleware:SysLogMiddleware.factory
    paging = zjy_webob.middleware:PagingMiddleware.factory
    resource_control = zjy_webob.middleware:ResourceMiddleware.factory


paste.app_factory =
    version_service = zjy_webob.service:version_app_factory
